# odaichat

./: Cargo.toml
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/app/: store.ts
frontend/src/ui/: channel.ts
src/: main.rs  model.rs  schema.sql
