[package]
name = "odaichat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
parking_lot = "0.12.3"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
